--- a/pom.xml
+++ b/pom.xml
@@ -533,8 +533,8 @@
                         <driver>org.postgresql.Driver</driver>
                         <url>jdbc:postgresql://localhost:5432/gnomeServer</url>
                         <defaultSchemaName></defaultSchemaName>
-                        <username>gnomeServer</username>
-                        <password></password>
+                        <username>postgres</username>
+                        <password>altra314159</password>
                         <referenceUrl>hibernate:spring:com.mycompany.myapp.domain?dialect=org.hibernate.dialect.PostgreSQL82Dialect&amp;hibernate.physical_naming_strategy=org.springframework.boot.orm.jpa.hibernate.SpringPhysicalNamingStrategy&amp;hibernate.implicit_naming_strategy=org.springframework.boot.orm.jpa.hibernate.SpringImplicitNamingStrategy</referenceUrl>
                         <verbose>true</verbose>
                         <logging>debug</logging>
